[package]
name = "push-serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
mime_guess = "2.0.4"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
